...

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scan_save_nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/scan_save_filename_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/scan_save_location_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                android:textColor="@color/text_color"
                android:textSize="@dimen/txt_size_15sp"
                app:layout_constraintEnd_toEndOf="@+id/scan_save_without_txt_recognition_pdf_checkbox"
                app:layout_constraintStart_toStartOf="@+id/scan_save_without_txt_recognition_pdf_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/scan_save_without_txt_recognition_text" />
...
                android:textColor="@color/text_color"
                android:textSize="@dimen/txt_size_15sp"
                app:layout_constraintEnd_toEndOf="@+id/scan_save_without_txt_recognition_jpg_checkbox"
                app:layout_constraintStart_toStartOf="@+id/scan_save_without_txt_recognition_jpg_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/scan_save_without_txt_recognition_text" />
...
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                app:layout_constraintEnd_toStartOf="@+id/scan_save_without_txt_recognition_png_checkbox"
                app:layout_constraintStart_toEndOf="@+id/scan_save_without_txt_recognition_pdf_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/scan_save_without_txt_recognition_jpg_check_label" />
...
                android:textColor="@color/text_color"
                android:textSize="@dimen/txt_size_15sp"
                app:layout_constraintEnd_toEndOf="@+id/scan_save_with_txt_recognition_pdf_checkbox"
                app:layout_constraintStart_toStartOf="@+id/scan_save_with_txt_recognition_pdf_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/scan_save_with_txt_recognition_text" />
...
                android:textColor="@color/text_color"
                android:textSize="@dimen/txt_size_15sp"
                app:layout_constraintEnd_toEndOf="@+id/scan_save_with_txt_recognition_txt_checkbox"
                app:layout_constraintStart_toStartOf="@id/scan_save_with_txt_recognition_txt_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/scan_save_with_txt_recognition_text" />
...

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/scan_save_pdf_password_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/scan_save_pdf_password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
        android:layout_marginBottom="@dimen/standard_margin"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toTopOf="@+id/save_scan_btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
...
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_scan_btn_save"
        app:layout_constraintStart_toStartOf="parent" />

...
