...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <io.scanbot.sdk.ui.EditPolygonImageView
        android:id="@+id/crop_polygon_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cornerImageSrc="@drawable/ui_crop_corner_handle"
        app:edgeColor="@color/primary"
        android:padding="@dimen/standard_padding"
        app:edgeImageSrc="@drawable/ui_crop_side_handle"
        app:editPolygonHandleSize="48dp"
        app:editPolygonStrokeWidth="1dp"
        app:layout_constraintBottom_toTopOf="@+id/crop_btn_reset_borders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:magneticLineTreshold="10dp" />

    <io.scanbot.sdk.ui.MagnifierView
...
